crates/usfm_parser/tests/snapshots/tcdocs__special-cases_id-in-text.snap
---
source: usfm_parser/tests/snapshot.rs
description: "\\id GEN\n\\c 1\n\\p\n\\v 1 verse one\n\\v 2 verse two did have an id EXO in it."
---
Book GEN "" @0..7
ChapterStart 1@8..12
Para p@13..71
  VerseStart 1@16..20
  Text "verse one"@21..31
  VerseEnd 1
  Text " "
  VerseStart 2@31..35
  Text "verse two did have an id EXO in it."@36..71
  VerseEnd 2
ChapterEnd 1
