crates/usfm_parser/tests/snapshots/tcdocs__special-cases_nested-notes.snap
---
source: usfm_parser/tests/snapshot.rs
description: "\\id SNG\n\\c 1\n\\p\n\\v 26 फिर परमेश्वर ने कहा, “हम \\nd मनुष्य \\f + \\fr 1.26 \\fq मनुष्य: \\ft मनुष्य नई प्रजाति है, वह विशेष रूप से इस पृथ्वी के अन्य प्रकार के जीवों से भिन्न है। \\f* \\nd* को \\it अपने स्वरूप के अनुसार\\it*\\f + \\fr 1.26 \\fq अपने स्वरूप के अनुसार: \\ft अर्थात् अपनी समानता में। मनुष्य का स्वर्ग से सम्बंध है और इस पृथ्वी का कोई भी प्राणी नहीं है\\f* अपनी समानता में बनाएँ; और वे समुद्र की मछलियों, और आकाश के पक्षियों, और घरेलू पशुओं, और सारी पृथ्वी पर, और सब रेंगनेवाले जन्तुओं पर जो पृथ्वी पर रेंगते हैं, अधिकार रखें।”\\bdit (याकू. 3:9) \\bdit*"
snapshot_kind: text
---
Book SNG "" @0..7
ChapterStart 1@8..12
Para p@13..1241
  VerseStart 26@16..21
  Text "फिर परम\u{947}श\u{94d}वर न\u{947} कहा, “हम "@22..85
  Char nd@85..375
    Text "मन\u{941}ष\u{94d}य "@89..108
    Note f caller=+@108..370
      Char fr@113..122
        Text "1.26 "@117..122
      Char fq@122..146
        Text "मन\u{941}ष\u{94d}य: "@126..146
      Char ft@146..370
        Text "मन\u{941}ष\u{94d}य नई प\u{94d}रजाति ह\u{948}, वह विश\u{947}ष र\u{942}प स\u{947} इस प\u{943}थ\u{94d}वी क\u{947} अन\u{94d}य प\u{94d}रकार क\u{947} जीवो\u{902} स\u{947} भिन\u{94d}न ह\u{948}। "@150..367
    Text " "@370..371
  Text " को "@375..383
  Char it@383..448
    Text "अपन\u{947} स\u{94d}वर\u{942}प क\u{947} अन\u{941}सार"@387..444
  Note f caller=+@448..772
    Char fr@453..462
      Text "1.26 "@457..462
    Char fq@462..525
      Text "अपन\u{947} स\u{94d}वर\u{942}प क\u{947} अन\u{941}सार: "@466..525
    Char ft@525..772
      Text "अर\u{94d}थात\u{94d} अपनी समानता म\u{947}\u{902}। मन\u{941}ष\u{94d}य का स\u{94d}वर\u{94d}ग स\u{947} सम\u{94d}ब\u{902}ध ह\u{948} और इस प\u{943}थ\u{94d}वी का कोई भी प\u{94d}राणी नही\u{902} ह\u{948}"@529..769
  Text " अपनी समानता म\u{947}\u{902} बनाए\u{901}; और व\u{947} सम\u{941}द\u{94d}र की मछलियो\u{902}, और आकाश क\u{947} पक\u{94d}षियो\u{902}, और घर\u{947}ल\u{942} पश\u{941}ओ\u{902}, और सारी प\u{943}थ\u{94d}वी पर, और सब र\u{947}\u{902}गन\u{947}वाल\u{947} जन\u{94d}त\u{941}ओ\u{902} पर जो प\u{943}थ\u{94d}वी पर र\u{947}\u{902}गत\u{947} ह\u{948}\u{902}, अधिकार रख\u{947}\u{902}।”"@772..1209
  Char bdit@1209..1241
    Text "(याक\u{942}. 3:9) "@1215..1235
  VerseEnd 26
ChapterEnd 1
