crates/usfm_parser/tests/snapshots/tcdocs__special-cases_punct-at-break.snap
---
source: usfm_parser/tests/snapshot.rs
description: "\\id GEN\n\\c 1\n\\p\n\\v 1 verse one\n\\v 2 verse two\\p\n, which has a comma at the text break point."
---
Book GEN "" @0..7
ChapterStart 1@8..12
Para p@13..45
  VerseStart 1@16..20
  Text "verse one"@21..31
  VerseEnd 1
  Text " "
  VerseStart 2@31..35
  Text "verse two"@36..45
Para p@45..92
  Text ", which has a comma at the text break point."@48..92
  VerseEnd 2
ChapterEnd 1
