crates/usfm_parser/tests/snapshots/tcdocs__usfmjsTests_heb-12-27_grc.snap
---
source: usfm_parser/tests/snapshot.rs
description: "\\id GEN\n\\c 1\n\\p\n\\v 27\n\\w τὸ|lemma=\"ὁ\" strong=\"G35880\" x-morph=\"Gr,RD,,,,NNS,\"\\w*\n\\w δὲ|lemma=\"δέ\" strong=\"G11610\" x-morph=\"Gr,CC,,,,,,,,\"\\w*,\n“\\w ἔτι|lemma=\"ἔτι\" strong=\"G20890\" x-morph=\"Gr,D,,,,,,,,,\"\\w*\n\\w ἅπαξ|lemma=\"ἅπαξ\" strong=\"G05300\" x-morph=\"Gr,D,,,,,,,,,\"\\w*”,\n\\w δηλοῖ|lemma=\"δηλόω\" strong=\"G12130\" x-morph=\"Gr,V,IPA3,,S,\"\\w*\n\\w τῶν|lemma=\"ὁ\" strong=\"G35880\" x-morph=\"Gr,RD,,,,GNP,\"\\w*\n\\w σαλευομένων|lemma=\"σαλεύω\" strong=\"G45310\" x-morph=\"Gr,V,PPP,GNP,\"\\w*\n\\w μετάθεσιν|lemma=\"μετάθεσις\" strong=\"G33310\" x-morph=\"Gr,N,,,,,AFS,\"\\w*,\n\\w ὡς|lemma=\"ὡς\" strong=\"G56130\" x-morph=\"Gr,CS,,,,,,,,\" x-tw=\"rc://*/tw/dict/bible/other/like\" \\w*\n\\w πεποιημένων|lemma=\"ποιέω\" strong=\"G41600\" x-morph=\"Gr,V,PEP,GNP,\"\\w*,\n\\w ἵνα|lemma=\"ἵνα\" strong=\"G24430\" x-morph=\"Gr,CS,,,,,,,,\"\\w*\n\\w μείνῃ|lemma=\"μένω\" strong=\"G33060\" x-morph=\"Gr,V,SAA3,,S,\"\\w*\n\\w τὰ|lemma=\"ὁ\" strong=\"G35880\" x-morph=\"Gr,RD,,,,NNP,\"\\w*\n\\w μὴ|lemma=\"μή\" strong=\"G33610\" x-morph=\"Gr,D,,,,,,,,,\"\\w*\n\\w σαλευόμενα|lemma=\"σαλεύω\" strong=\"G45310\" x-morph=\"Gr,V,PPP,NNP,\"\\w*.\n"
---
Book GEN "" @0..7
ChapterStart 1@8..12
Para p@13..1187
  VerseStart 27@16..21
  Char w@22..85 lemma="ὁ" strong="G35880" x-morph="Gr,RD,,,,NNS,"
    Text "τὸ"@25..30
  Text " "@85..86
  Char w@86..150 lemma="δέ" strong="G11610" x-morph="Gr,CC,,,,,,,,"
    Text "δὲ"@89..94
  Text ", “"@150..155
  Char w@155..224 lemma="ἔτι" strong="G20890" x-morph="Gr,D,,,,,,,,,"
    Text "ἔτι"@158..165
  Text " "@224..225
  Char w@225..298 lemma="ἅπαξ" strong="G05300" x-morph="Gr,D,,,,,,,,,"
    Text "ἅπαξ"@228..237
  Text "”, "@298..303
  Char w@303..379 lemma="δηλόω" strong="G12130" x-morph="Gr,V,IPA3,,S,"
    Text "δηλοῖ"@306..317
  Text " "@379..380
  Char w@380..445 lemma="ὁ" strong="G35880" x-morph="Gr,RD,,,,GNP,"
    Text "τῶν"@383..390
  Text " "@445..446
  Char w@446..535 lemma="σαλεύω" strong="G45310" x-morph="Gr,V,PPP,GNP,"
    Text "σαλευομένων"@449..471
  Text " "@535..536
  Char w@536..627 lemma="μετάθεσις" strong="G33310" x-morph="Gr,N,,,,,AFS,"
    Text "μετάθεσιν"@539..557
  Text ", "@627..629
  Char w@629..734 lemma="ὡς" strong="G56130" x-morph="Gr,CS,,,,,,,," x-tw="rc://*/tw/dict/bible/other/like"
    Text "ὡς"@632..637
  Text " "@734..735
  Char w@735..822 lemma="ποιέω" strong="G41600" x-morph="Gr,V,PEP,GNP,"
    Text "πεποιημένων"@738..760
  Text ", "@822..824
  Char w@824..893 lemma="ἵνα" strong="G24430" x-morph="Gr,CS,,,,,,,,"
    Text "ἵνα"@827..834
  Text " "@893..894
  Char w@894..968 lemma="μένω" strong="G33060" x-morph="Gr,V,SAA3,,S,"
    Text "μείνῃ"@897..908
  Text " "@968..969
  Char w@969..1032 lemma="ὁ" strong="G35880" x-morph="Gr,RD,,,,NNP,"
    Text "τὰ"@972..977
  Text " "@1032..1033
  Char w@1033..1097 lemma="μή" strong="G33610" x-morph="Gr,D,,,,,,,,,"
    Text "μὴ"@1036..1041
  Text " "@1097..1098
  Char w@1098..1185 lemma="σαλεύω" strong="G45310" x-morph="Gr,V,PPP,NNP,"
    Text "σαλευόμενα"@1101..1121
  Text "."@1185..1187
  VerseEnd 27
ChapterEnd 1
