crates/usfm_parser/tests/snapshots/tcdocs__usfmjsTests_inline_words.snap
---
source: usfm_parser/tests/snapshot.rs
description: "\\id GEN\n\\c 1\n\\p\n\\v 13 where he stayed 40 days, being\ntempted by Satan. Wild animals were there also, but angels came and helped him.\n\\ms Jesus' Public Ministry in Galilee\n\\mr 1.14--9.50\n\\ip Jesus returns to Galilee and does not go back to Judea until the close of his public\nministry. There is no indication of how long his Galilean ministry lasted: only when he is\nback in Judea is a \\w festival\\w* mentioned (14.1). He spends much of his\ntime in Capernaum (1.21; 2.1; 3.1, 20; 9.33) and other places around Lake Galilee (1.9; 2.13;\n3.7; 4.1). Twice Jesus ventures out of Galilee: into the region of the Ten Towns (5.1-20) and\nPhoenicia (7.24-31). His actions and teachings soon arouse opposition from the religious\nleaders (2.6-7, 24; 3.6, 22; 7.1-13; 8.11-12), and before long he predicts his coming arrest,\ncondemnation, and crucifixion (8.31; 9.30-31).\n\\s1 Jesus Calls Four Fishermen\n\\r (Mt 4.12-22; Lk 4.14-15; 5.1-11)\n\\ip Jesus' message is about the arrival of the \\w kingdom of god\\w*, which will happen soon.\nTo prepare for it, the people need to repent (1.15). He immediately summons two pairs of\nfishermen brothers to be his followers and helpers.\n\\p\n"
---
Book GEN "" @0..7
ChapterStart 1@8..12
Para p@13..133
  VerseStart 13@16..21
  Text "where he stayed 40 days, being tempted by Satan. Wild animals were there also, but angels came and helped him."@22..133
  VerseEnd 13
Para ms@133..171
  Text "Jesus' Public Ministry in Galilee"@137..171
Para mr@171..186
  Text "1.14--9.50"@175..186
Para ip@186..858
  Text "Jesus returns to Galilee and does not go back to Judea until the close of his public ministry. There is no indication of how long his Galilean ministry lasted: only when he is back in Judea is a "@190..385
  Char w@385..399
    Text "festival"@388..396
  Text " mentioned (14.1). He spends much of his time in Capernaum (1.21; 2.1; 3.1, 20; 9.33) and other places around Lake Galilee (1.9; 2.13; 3.7; 4.1). Twice Jesus ventures out of Galilee: into the region of the Ten Towns (5.1-20) and Phoenicia (7.24-31). His actions and teachings soon arouse opposition from the religious leaders (2.6-7, 24; 3.6, 22; 7.1-13; 8.11-12), and before long he predicts his coming arrest, condemnation, and crucifixion (8.31; 9.30-31)."@399..858
Para s1@858..889
  Text "Jesus Calls Four Fishermen"@862..889
Para r@889..925
  Text "(Mt 4.12-22; Lk 4.14-15; 5.1-11)"@892..925
Para ip@925..1159
  Text "Jesus' message is about the arrival of the "@929..972
  Char w@972..992
    Text "kingdom of god"@975..989
  Text ", which will happen soon. To prepare for it, the people need to repent (1.15). He immediately summons two pairs of fishermen brothers to be his followers and helpers."@992..1159
Para p@1159..1162
ChapterEnd 1
